--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>json-processing</module>
+        <module>servlet-learn</module>
+        <module>servlet-learn</module>
     </modules>
 
     <properties>
