--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -8,18 +8,21 @@
     <artifactId>NSHI</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
     <modules>
         <module>json-processing</module>
         <module>servlet-learn</module>
-        <module>servlet-learn</module>
+        <module>spring-learn</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <jackson.version>2.13.4</jackson.version>
         <junit.version>5.8.2</junit.version>
+        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+        <spring.boot.version>2.7.1</spring.boot.version>
     </properties>
 
     <dependencyManagement>
@@ -39,6 +42,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -48,31 +59,112 @@
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>org.apache.maven.plugins</groupId>-->
-<!--            <artifactId>maven-compiler-plugin</artifactId>-->
-<!--            <version>3.1</version>-->
-<!--            <type>maven-plugin</type>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>org.codehaus.plexus</groupId>
-            <artifactId>plexus-component-annotations</artifactId>
-            <version>1.7.1</version>
-        </dependency>
     </dependencies>
 
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring.boot.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven.surefire.plugin.version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/*IntegrationTest.java</exclude>
+                    </excludes>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
-
-
 </project>
+
+
+        <!--<?xml version="1.0" encoding="UTF-8"?>-->
+        <!--<project xmlns="http://maven.apache.org/POM/4.0.0"-->
+        <!--         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"-->
+        <!--         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">-->
+        <!--    <modelVersion>4.0.0</modelVersion>-->
+
+        <!--    <groupId>org.example</groupId>-->
+        <!--    <artifactId>NSHI</artifactId>-->
+        <!--    <version>1.0-SNAPSHOT</version>-->
+        <!--    <packaging>pom</packaging>-->
+        <!--    <modules>-->
+        <!--        <module>json-processing</module>-->
+        <!--        <module>servlet-learn</module>-->
+        <!--        <module>servlet-learn</module>-->
+        <!--    </modules>-->
+
+        <!--    <properties>-->
+        <!--        <maven.compiler.source>19</maven.compiler.source>-->
+        <!--        <maven.compiler.target>19</maven.compiler.target>-->
+        <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+        <!--        <jackson.version>2.13.4</jackson.version>-->
+        <!--        <junit.version>5.8.2</junit.version>-->
+        <!--    </properties>-->
+
+        <!--    <dependencyManagement>-->
+        <!--        <dependencies>-->
+        <!--            <dependency>-->
+        <!--                <groupId>com.fasterxml.jackson</groupId>-->
+        <!--                <artifactId>jackson-bom</artifactId>-->
+        <!--                <version>${jackson.version}</version>-->
+        <!--                <type>pom</type>-->
+        <!--                <scope>import</scope>-->
+        <!--            </dependency>-->
+
+        <!--            <dependency>-->
+        <!--                <groupId>org.junit</groupId>-->
+        <!--                <artifactId>junit-bom</artifactId>-->
+        <!--                <version>${junit.version}</version>-->
+        <!--                <type>pom</type>-->
+        <!--                <scope>import</scope>-->
+        <!--            </dependency>-->
+        <!--        </dependencies>-->
+        <!--    </dependencyManagement>-->
+
+        <!--    <dependencies>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.junit.jupiter</groupId>-->
+        <!--            <artifactId>junit-jupiter</artifactId>-->
+        <!--            <scope>test</scope>-->
+        <!--        </dependency>-->
+
+        <!--&lt;!&ndash;        <dependency>&ndash;&gt;-->
+        <!--&lt;!&ndash;            <groupId>org.apache.maven.plugins</groupId>&ndash;&gt;-->
+        <!--&lt;!&ndash;            <artifactId>maven-compiler-plugin</artifactId>&ndash;&gt;-->
+        <!--&lt;!&ndash;            <version>3.1</version>&ndash;&gt;-->
+        <!--&lt;!&ndash;            <type>maven-plugin</type>&ndash;&gt;-->
+        <!--&lt;!&ndash;        </dependency>&ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.codehaus.plexus</groupId>-->
+        <!--            <artifactId>plexus-component-annotations</artifactId>-->
+        <!--            <version>1.7.1</version>-->
+        <!--        </dependency>-->
+        <!--    </dependencies>-->
+
+        <!--    <build>-->
+        <!--        <pluginManagement>-->
+        <!--            <plugins>-->
+        <!--                <plugin>-->
+        <!--                    <groupId>org.apache.maven.plugins</groupId>-->
+        <!--                    <artifactId>maven-compiler-plugin</artifactId>-->
+        <!--                    <version>3.8.1</version>-->
+        <!--                </plugin>-->
+        <!--            </plugins>-->
+        <!--        </pluginManagement>-->
+        <!--    </build>-->
+
+
+        <!--</project>-->
